# Advanced-AI-Project-2

./: .gitignore  CMakeLists.txt  README.md  inputFileExample.txt
.history/: inputFileExample_20250406150852.txt  inputFileExample_20250406152724.txt
include/: form1.hpp  form2.hpp  form3.hpp  form_save.hpp  input_handler.hpp  main_window.hpp
input_files/: input_file_example.txt
src/: form1.cpp  form2.cpp  form3.cpp  form_save.cpp  input_handler.cpp  main.cpp  main_window.cpp
